--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+*/node_modules
+node_modules
 /.pnp
 .pnp.js
+
+*/build/
+./client/build/
 
 # testing
 /coverage
@@ -21,3 +25,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+*/.env
+.env
